--- a/android/vision-quickstart/app/src/main/res/layout/activity_vision_entry_choice.xml
+++ b/android/vision-quickstart/app/src/main/res/layout/activity_vision_entry_choice.xml
@@ -9,15 +9,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:orientation="vertical">
 
-    <TextView
-        android:background="@drawable/list_item_background"
-        android:id="@+id/java_entry_point"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_vertical_margin"
-        android:padding="20dp"
-        android:text="@string/java_entry_title"
-        android:textSize="26sp" />
+<!--    <TextView-->
+<!--        android:background="@drawable/list_item_background"-->
+<!--        android:id="@+id/java_entry_point"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="@dimen/activity_vertical_margin"-->
+<!--        android:padding="20dp"-->
+<!--        android:text="@string/java_entry_title"-->
+<!--        android:textSize="26sp" />-->
 
     <TextView
         android:background="@drawable/list_item_background"
